feat: use ada logo

--- a/20/index.html
+++ b/20/index.html
@@ -29,14 +29,19 @@
       <div class="branding">
         <div class="container-fluid">
           <nav class="main-nav navbar navbar-expand-lg">
-            <div class="site-logo">
-              <a class="scrollto" href="#hero-block"
-                ><img
-                  class="logo-icon"
-                  src="assets/images/logo-white.svg"
-                  alt="logo"
-              /></a>
-            </div>
+            <a
+              class="navbar-brand scrollto d-flex align-items-center"
+              href="#hero-block"
+            >
+              <img
+                src="assets/images/ada.svg"
+                width="30"
+                height="30"
+                class="d-inline-block align-top mr-2"
+                alt=""
+              />
+              #adacon20
+            </a>
 
             <div class="navbar-btn order-lg-2">
               <a
