feat: layz load images

--- a/20/index.html
+++ b/20/index.html
@@ -34,6 +34,7 @@
               href="#hero-block"
             >
               <img
+                loading="lazy"
                 src="assets/images/ada.svg"
                 width="30"
                 height="30"
@@ -337,6 +338,7 @@
                 data-toggle="modal"
                 data-target="#modal-speaker-1"
                 ><img
+                  loading="lazy"
                   src="assets/images/speakers/speaker-1.jpg"
                   class="card-img-top rounded-0"
                   alt=""
@@ -382,6 +384,7 @@
                 data-toggle="modal"
                 data-target="#modal-speaker-1"
                 ><img
+                  loading="lazy"
                   src="assets/images/speakers/speaker-2.jpg"
                   class="card-img-top rounded-0"
                   alt=""
@@ -427,6 +430,7 @@
                 data-toggle="modal"
                 data-target="#modal-speaker-1"
                 ><img
+                  loading="lazy"
                   src="assets/images/speakers/speaker-3.jpg"
                   class="card-img-top rounded-0"
                   alt=""
@@ -472,6 +476,7 @@
                 data-toggle="modal"
                 data-target="#modal-speaker-1"
                 ><img
+                  loading="lazy"
                   src="assets/images/speakers/speaker-4.jpg"
                   class="card-img-top rounded-0"
                   alt=""
@@ -517,6 +522,7 @@
                 data-toggle="modal"
                 data-target="#modal-speaker-1"
                 ><img
+                  loading="lazy"
                   src="assets/images/speakers/speaker-5.jpg"
                   class="card-img-top rounded-0"
                   alt=""
@@ -562,6 +568,7 @@
                 data-toggle="modal"
                 data-target="#modal-speaker-1"
                 ><img
+                  loading="lazy"
                   src="assets/images/speakers/speaker-6.jpg"
                   class="card-img-top rounded-0"
                   alt=""
@@ -607,6 +614,7 @@
                 data-toggle="modal"
                 data-target="#modal-speaker-1"
                 ><img
+                  loading="lazy"
                   src="assets/images/speakers/speaker-7.jpg"
                   class="card-img-top rounded-0"
                   alt=""
@@ -652,6 +660,7 @@
                 data-toggle="modal"
                 data-target="#modal-speaker-1"
                 ><img
+                  loading="lazy"
                   src="assets/images/speakers/speaker-8.jpg"
                   class="card-img-top rounded-0"
                   alt=""
@@ -780,6 +789,7 @@
                     data-toggle="modal"
                     data-target="#modal-speaker-1"
                     ><img
+                      loading="lazy"
                       class="profile-image rounded-circle  mb-2"
                       src="assets/images/speakers/speaker-1.jpg"
                       alt=""
@@ -828,6 +838,7 @@
                     data-toggle="modal"
                     data-target="#modal-speaker-1"
                     ><img
+                      loading="lazy"
                       class="profile-image rounded-circle  mb-2"
                       src="assets/images/speakers/speaker-2.jpg"
                       alt=""
@@ -892,6 +903,7 @@
                     data-toggle="modal"
                     data-target="#modal-speaker-1"
                     ><img
+                      loading="lazy"
                       class="profile-image rounded-circle  mb-2"
                       src="assets/images/speakers/speaker-3.jpg"
                       alt=""
@@ -938,6 +950,7 @@
                     data-toggle="modal"
                     data-target="#modal-speaker-1"
                     ><img
+                      loading="lazy"
                       class="profile-image rounded-circle  mb-2"
                       src="assets/images/speakers/speaker-4.jpg"
                       alt=""
@@ -1002,6 +1015,7 @@
                     data-toggle="modal"
                     data-target="#modal-speaker-1"
                     ><img
+                      loading="lazy"
                       class="profile-image rounded-circle  mb-2"
                       src="assets/images/speakers/speaker-5.jpg"
                       alt=""
@@ -1048,6 +1062,7 @@
                     data-toggle="modal"
                     data-target="#modal-speaker-1"
                     ><img
+                      loading="lazy"
                       class="profile-image rounded-circle  mb-2"
                       src="assets/images/speakers/speaker-6.jpg"
                       alt=""
@@ -1094,6 +1109,7 @@
                     data-toggle="modal"
                     data-target="#modal-speaker-1"
                     ><img
+                      loading="lazy"
                       class="profile-image rounded-circle  mb-2"
                       src="assets/images/speakers/speaker-7.jpg"
                       alt=""
@@ -1140,6 +1156,7 @@
                     data-toggle="modal"
                     data-target="#modal-speaker-1"
                     ><img
+                      loading="lazy"
                       class="profile-image rounded-circle  mb-2"
                       src="assets/images/speakers/speaker-8.jpg"
                       alt=""
@@ -1493,6 +1510,7 @@
             <div class="figures-holder">
               <div class="figure figure-1">
                 <img
+                  loading="lazy"
                   class="shadow"
                   src="assets/images/venue/venue-1.jpg"
                   alt=""
@@ -1500,6 +1518,7 @@
               </div>
               <div class="figure figure-2">
                 <img
+                  loading="lazy"
                   class="shadow"
                   src="assets/images/venue/venue-2.jpg"
                   alt=""
@@ -1507,6 +1526,7 @@
               </div>
               <div class="figure figure-3">
                 <img
+                  loading="lazy"
                   class="shadow"
                   src="assets/images/venue/venue-3.jpg"
                   alt=""
@@ -1514,6 +1534,7 @@
               </div>
               <div class="figure figure-4">
                 <img
+                  loading="lazy"
                   class="shadow"
                   src="assets/images/venue/venue-4.jpg"
                   alt=""
@@ -1541,40 +1562,40 @@
         </div>
         <div class="row logos justify-content-center">
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-1.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-1.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-2.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-2.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-3.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-3.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-4.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-4.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-5.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-5.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-6.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-6.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-7.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-7.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-8.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-8.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-9.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-9.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-10.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-10.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-11.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-11.svg" alt="" />
           </div>
           <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img src="assets/images/logos/logo-12.svg" alt="" />
+            <img loading="lazy" src="assets/images/logos/logo-12.svg" alt="" />
           </div>
         </div>
         <!--//row-->
@@ -1658,6 +1679,7 @@
               class="media flex-column flex-md-row theme-bg-light p-4 p-lg-5"
             >
               <img
+                loading="lazy"
                 class="profile-image mb-3 mb-md-0 mr-md-4 rounded-circle mx-auto"
                 src="assets/images/speakers/speaker-1.jpg"
                 alt=""
@@ -1736,5 +1758,11 @@
     <script>
       feather.replace();
     </script>
+    <script
+      async
+      src="https://cdn.jsdelivr.net/npm/loading-attribute-polyfill@0.2.0/loading-attribute-polyfill.min.js"
+      integrity="sha256-kX73NqVUoUbV0K44kgoqP8P8IZfU0OEjr/afCnK2Mrg="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
