fix: hiden menu tickets button on xs

--- a/20/index.html
+++ b/20/index.html
@@ -44,7 +44,7 @@
               #adacon20
             </a>
 
-            <div class="navbar-btn order-lg-2">
+            <div class="navbar-btn order-lg-2 d-none d-sm-block">
               <a
                 class="btn btn-secondary"
                 href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
