fix: do not layzload logo

--- a/20/index.html
+++ b/20/index.html
@@ -27,8 +27,7 @@
       <div class="container-fluid">
         <nav class="main-nav navbar navbar-expand-lg">
           <a class="navbar-brand scrollto d-flex align-items-center" href="#hero-block">
-            <img class="lazyload" data-src="assets/images/ada.svg" width="30" height="30"
-              class="d-inline-block align-top mr-2" alt="" />
+            <img src="assets/images/ada.svg" width="30" height="30" class="d-inline-block align-top mr-2" alt="" />
             #adacon20
           </a>
 
