--- a/20/index.html
+++ b/20/index.html
@@ -236,7 +236,8 @@
         <div class="row">
           <div class="col-12 col-md-6 mb-3">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="560" height="260" src="https://www.youtube-nocookie.com/embed/RjAXEOIfkq8"
+              <iframe class="embed-responsive-item lazyload" width="560" height="260"
+                data-src="https://www.youtube-nocookie.com/embed/RjAXEOIfkq8"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
@@ -245,8 +246,8 @@
           <!--//col-->
           <div class="col-12 col-md-6 mb-md-5">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" width="560" height="260"
-                src="https://www.youtube-nocookie.com/embed/FbgohflFzo8"
+              <iframe class="embed-responsive-item lazyload" width="560" height="260"
+                data-src="https://www.youtube-nocookie.com/embed/FbgohflFzo8"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
