fix: date, remove day 2+3

--- a/20/index.html
+++ b/20/index.html
@@ -97,7 +97,7 @@
       <div class="hero-text-block">
         <h1 class="hero-heading mb-2">AdaCon 2020</h1>
         <div class="hero-meta mb-3 d-flex align-items-center">
-          <i data-feather="calendar" class="mr-2"></i>October 2020
+          <i data-feather="calendar" class="mr-2"></i>Tue, 13. October 2020
           <i data-feather="map-pin" class="mx-2"></i>Oslo, Norway
         </div>
         <div class="hero-intro mb-4">
@@ -217,7 +217,7 @@
       </div>
       <!--//event-countdown-->
       <div class="about-cta text-center mb-5">
-        <a class="btn btn-secondary btn-lg  mb-5"
+        <a class="btn btn-primary btn-lg  mb-5"
           href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
           target="_blank">Get Your Ticket Today</a>
       </div>
@@ -582,31 +582,6 @@
     <div class="container">
       <h3 class="section-heading text-center mb-5">Schedule</h3>
 
-      <!-- Nav tabs -->
-      <ul class="schedule-nav nav nav-pills nav-fill" id="myTab" role="tablist">
-        <li class="nav-item mr-2">
-          <a class="nav-link active" id="tab-1" data-toggle="tab" href="#tab-1-content" role="tab"
-            aria-controls="tab-1-content" aria-selected="true">
-            <span class="heading">Day 1</span>
-            <span class="meta">(Wed 12, Oct)</span>
-          </a>
-        </li>
-        <li class="nav-item mr-2">
-          <a class="nav-link" id="tab-2" data-toggle="tab" href="#tab-2-content" role="tab"
-            aria-controls="tab-2-content" aria-selected="false">
-            <span class="heading">Day 2</span>
-            <span class="meta">(Thu 13, Oct)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="tab-3" data-toggle="tab" href="#tab-3-content" role="tab"
-            aria-controls="tab-3-content" aria-selected="false">
-            <span class="heading">Day 3</span>
-            <span class="meta">(Fri 14, Oct)</span>
-          </a>
-        </li>
-      </ul>
-
       <!-- Tab panes -->
       <div class="schedule-tab-content tab-content">
         <div class="tab-pane active" id="tab-1-content" role="tabpanel" aria-labelledby="tab-1">
@@ -949,26 +924,12 @@
           <!--//item-->
         </div>
         <!--//tab-1-content-->
-        <div class="tab-pane no-timeline" id="tab-2-content" role="tabpanel" aria-labelledby="tab-2">
-          <h4 class="text-center py-5 text-muted">
-            Day 2 Agenda Coming Soon...
-          </h4>
-        </div>
-        <!--//tab-2-content-->
-        <div class="tab-pane no-timeline" id="tab-3-content" role="tabpanel" aria-labelledby="tab-3">
-          <h4 class="text-center py-5 text-muted">
-            Day 3 Agenda Coming Soon...
-          </h4>
-        </div>
-        <!--//tab-3-content-->
       </div>
       <!--//schedule-tab-content-->
       <div class="schedule-cta text-center mx-auto">
         <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
-          class="btn btn-primary btn-lg mr-md-2 d-block d-md-inline-block mb-3 mb-md-0" target="_blank">Download
-          Schedule</a><a
-          href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
-          class="btn btn-secondary btn-lg d-block d-md-inline-block" target="_blank">Buy Tickets</a>
+          class="btn btn-secondary btn-lg d-block d-md-inline-block" target="_blank">Get Tickets</a>
+
       </div>
     </div>
     <!--//container-->
