--- a/20/index.html
+++ b/20/index.html
@@ -1362,7 +1362,7 @@
   <script>
     feather.replace();
   </script>
-  <script async src="http://afarkas.github.io/lazysizes/lazysizes.min.js" crossorigin="anonymous"></script>
+  <script async src="https://afarkas.github.io/lazysizes/lazysizes.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
